Basic Color fix ++ readability

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    background: linear-gradient(135deg, rgba(120, 120, 120, 0.1), rgba(120, 120, 120, 0));
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border:1px solid rgba(255, 255, 255, 0.18);
@@ -35,7 +35,7 @@ nav li a {
     text-decoration: none;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.18);
     font-size: 20px;
-    transition: border-bottom .3s;
+    transition: border-bottom 0.5s;
     font-weight: 400;
 }
 
@@ -49,7 +49,7 @@ nav li a:hover {
     object-fit: cover;
 }
 
-.main{
+.main {
     margin: auto;
     margin-top: 50px;
     width: 80%;
